# corbit

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
src/corbit/: __init__.py  caffeinate.py  cli.py  config.py  epic.py  github.py  linear.py  models.py  orchestrator.py  pipeline.py  prompts.py  reviewer.py  stream.py  worktree.py
src/corbit/agents/: __init__.py  base.py  claude_code.py  codex.py  registry.py
src/corbit/issues/: __init__.py  base.py  github.py  linear.py
src/corbit/repo/: __init__.py  base.py  github.py
tests/: test_github.py  test_models.py  test_pipeline.py  test_worktree.py
